[package]
name = "mc-history-handler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
reqwest = {version="0.11.2", features = ["blocking", "json"]}
fs_extra = "1.2.0"
